[package]
name = "fpkg_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["default"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum_typed_multipart = "0.16.6"
tempfile = "3.1"
serde_json = "1.0.150"